--- a/Observaciones/Secciones/Observatorio.tex
+++ b/Observaciones/Secciones/Observatorio.tex
@@ -7,24 +7,25 @@ astronómica, equipado para realizar observaciones del Sol, monitoreo de basura
 espacial, y la observación de objetos variables, como los sistemas binarios o
 asteroides. A continuación se describe el equipo utilizado; como software de
 control se utilizó \textbf{Nighttime Imaging 'N'
-Astronomy}\footnote{\url{https://nighttime-imaging.eu}} (\textbf{NINA}), el cual
+Astronomy}\footnote{\myurl{https://nighttime-imaging.eu}} (\textbf{NINA}), el cual
 permita consolidar el control de todas las componentes mecánicas en una sola
 aplicación. 
 
 % TODO: look for mount documentation
 El telescopio utilizado para hacer las observaciones del sistema fue el tubo
 óptico \textbf{CDK20} de \textbf{PlaneWave
-Instruments}\footnote{\url{https://planewave.com/product/cdk20-ota/}}. Este
-telescopio de diseño \textit{Dall-Kirkham corregido} cuenta con un grupo de
-lentes frente al espejo esférico secundario, el cual resta los efectos de la
-aberración esférica presente en otras configuraciones de espejos primarios y
-secundarios, resultando en una imagen más nítida. Este instrumento, combinado
-con una montura ecuatorial \textbf{Orion HDX110}, nos permite una vista clara de
-la bóveda celeste a \ang{30} arriba del horizonte, con capacidad de observar
-objetos tenues más allá de 17 magnitudes.
+Instruments}\footnote{\myurl{https://planewave.com/product/cdk20-ota/}} con un
+número $f/6.8$. Este telescopio de diseño \textit{Dall-Kirkham corregido} cuenta
+con un grupo de lentes frente al espejo esférico secundario, el cual resta los
+efectos de la aberración esférica presente en otras configuraciones de espejos
+primarios y secundarios, resultando en una imagen más nítida. Este instrumento,
+combinado con una montura ecuatorial \textbf{Orion HDX110}, nos permite una
+vista clara de la bóveda celeste a \ang{30} arriba del horizonte, con capacidad
+de observar objetos tenues más allá de 17 magnitudes.
 
+% TODO: add filter wheel info
 El CCD usado para obtener las imágenes fue el
-\textbf{QHY174GPS}\footnote{\url{https://www.qhyccd.com/qhy174gps-imx174-scientific-cooled-camera/}}.
+\textbf{QHY174GPS}\footnote{\myurl{https://www.qhyccd.com/qhy174gps-imx174-scientific-cooled-camera/}}.
 Este CCD cuenta con una resolución de $1920 \times 1200$ pixeles. Para reducir
 el ruido térmico tiene un mecanismo de enfriamiento termoeléctrico, el cual lo
 puede enfriar a una temperatura de -\ang{40} C bajo la temperatura ambiente. 
