--- a/ref.bib
+++ b/ref.bib
@@ -316,3 +316,65 @@ A. Nitta and D. P. Schneider and S. A. Snedden and D. G. York},
 	pages = {9--22},
 	file = {Wenger et al. - 2000 - The SIMBAD astronomical database The CDS referenc.pdf:/home/ramon/Zotero/storage/5RNUUDQR/Wenger et al. - 2000 - The SIMBAD astronomical database The CDS referenc.pdf:application/pdf},
 }
+
+@software{ccdproc241,
+  author       = {Matt Craig and
+                  Steve Crawford and
+                  Michael Seifert and
+                  Thomas Robitaille and
+                  Brigitta Sipőcz and
+                  Josh Walawender and
+                  Steve Crawford and
+                  Zé Vinícius and
+                  Joe Philip Ninan and
+                  Michael Droettboom and
+                  Timothy Ellsworth Bowers and
+                  Jiyong Youn and
+                  Yash Gondhalekar and
+                  Erik Tollerud and
+                  P. L. Lim and
+                  E. M. Bray and
+                  Yoonsoo P. Bach and
+                  stottsco and
+                  VSN Reddy Janga and
+                  walkerna22 and
+                  Hans Moritz Günther and
+                  Evert Rol and
+                  Jaime A. and
+                  Larry Bradley and
+                  Adrian Price-Whelan and
+                  Christoph Deil and
+                  Jenna Ryon and
+                  Kelvin Lee and
+                  Kyle Barbary and
+                  Benjamin Weiner},
+  title        = {astropy/ccdproc: 2.4.1},
+  month        = may,
+  year         = 2023,
+  publisher    = {Zenodo},
+  version      = {2.4.1},
+  doi          = {10.5281/zenodo.7986923},
+  url          = {https://doi.org/10.5281/zenodo.7986923}
+}
+
+
+@article{astrometry,
+	title = {Astrometry.net: {Blind} astrometric calibration of arbitrary astronomical images},
+	volume = {139},
+	issn = {0004-6256, 1538-3881},
+	shorttitle = {Astrometry.net},
+	url = {http://arxiv.org/abs/0910.2233},
+	doi = {10.1088/0004-6256/139/5/1782},
+	abstract = {We have built a reliable and robust system that takes as input an astronomical image, and returns as output the pointing, scale, and orientation of that image (the astrometric calibration or WCS information). The system requires no first guess, and works with the information in the image pixels alone; that is, the problem is a generalization of the "lost in space" problem in which nothing--not even the image scale--is known. After robust source detection is performed in the input image, asterisms (sets of four or five stars) are geometrically hashed and compared to pre-indexed hashes to generate hypotheses about the astrometric calibration. A hypothesis is only accepted as true if it passes a Bayesian decision theory test against a background hypothesis. With indices built from the USNO-B Catalog and designed for uniformity of coverage and redundancy, the success rate is 99.9\% for contemporary near-ultraviolet and visual imaging survey data, with no false positives. The failure rate is consistent with the incompleteness of the USNO-B Catalog; augmentation with indices built from the 2MASS Catalog brings the completeness to 100\% with no false positives. We are using this system to generate consistent and standards-compliant meta-data for digital and digitized imaging from plate repositories, automated observatories, individual scientific investigators, and hobbyists. This is the first step in a program of making it possible to trust calibration meta-data for astronomical data of arbitrary provenance.},
+	number = {5},
+	urldate = {2023-11-29},
+	journal = {The Astronomical Journal},
+	author = {Lang, Dustin and Hogg, David W. and Mierle, Keir and Blanton, Michael and Roweis, Sam},
+	month = may,
+	year = {2010},
+	note = {arXiv:0910.2233 [astro-ph]},
+	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+	pages = {1782--1800},
+	annote = {Comment: submitted to AJ},
+	file = {arXiv.org Snapshot:/home/ramon/Zotero/storage/2WJDV6Q5/0910.html:text/html},
+}
