Added filter wheel information

--- a/Observaciones/Secciones/Observatorio.tex
+++ b/Observaciones/Secciones/Observatorio.tex
@@ -28,4 +28,21 @@ El CCD usado para obtener las imágenes fue el
 \textbf{QHY174GPS}\footnote{\myurl{https://www.qhyccd.com/qhy174gps-imx174-scientific-cooled-camera/}}.
 Este CCD cuenta con una resolución de $1920 \times 1200$ pixeles. Para reducir
 el ruido térmico tiene un mecanismo de enfriamiento termoeléctrico, el cual lo
-puede enfriar a una temperatura de -\ang{40} C bajo la temperatura ambiente. 
+puede enfriar a una temperatura de -\ang{40} C bajo la temperatura ambiente.
+Frente al CCD va equipado una rueda de filtros \textbf{ZWO
+7x36mm}\footnote{\myurl{https://astronomy-imaging-camera.com/product/new-zwo-efw-7x36mm/}},
+la cual puede ser equipada con 7 filtros distintos. Para las observaciones
+recabadas en este trabajo, utilizamos solamente el filtro \textbf{Luminance}, el
+cual se aproxima a la región del visible del espectro electromagnético
+(\quotefigure{zwoFilterTransmissionCurve}). 
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[scale=0.6]{Observaciones/Secciones/Figures/ZWO RGBL Transmission Curve.jpg}
+	\caption{Curva de transmisión de filtros de ZWO. El filtro de
+	\textbf{Luminance} se encuentra como la curva negra, abarcando todo el
+	espectro visible, desde los 400nm hasta 700nm. Gráfica obtenida de la
+	\href{https://astronomy-imaging-camera.com/product/zwo-lrgb-36mm-filters/}{página
+	de productos de ZWO}.}
+	\label{zwoFilterTransmissionCurve}
+\end{figure}
