Corrected custom commands to Spanish

--- a/Tesis.tex
+++ b/Tesis.tex
@@ -199,11 +199,12 @@
 \newcommand{\myboldverb}[1]{{\color{MyDarkBlue}\bfseries{#1}}} % per enfasi in grassetto 
 \newcommand{\myverb}[1]{{\color{MyDarkBlue}\texttt{#1}}} % in evidenza
 \newcommand{\myurl}[1]{{\color{MyDarkGreen}\url{#1}}} % per url
-\newcommand{\quotesection}[1]{{\color{SectionBlue}\textbf{Sezione \ref{#1}}}}
-\newcommand{\quotesubsection}[1]{{\color{SubSectionBlue}\textbf{Sezione \ref{#1}}}}
-\newcommand{\quotesubsubsection}[1]{{\color{SubSubSectionBlue}\textbf{Sezione \ref{#1}}}}
+\newcommand{\quotesection}[1]{{\color{SectionBlue}\textbf{Sección \ref{#1}}}}
+\newcommand{\quotesubsection}[1]{{\color{SubSectionBlue}\textbf{Sección \ref{#1}}}}
+\newcommand{\quotesubsubsection}[1]{{\color{SubSubSectionBlue}\textbf{Sección \ref{#1}}}}
 \newcommand{\quotefigure}[1]{{\color{MyDarkGreen}\textbf{Figura \ref{#1}}}}
 \newcommand{\quotetable}[1]{{\color{MyDarkGreen}\textbf{Tabla \ref{#1}}}}
+\newcommand{\quoteequation}[1]{{\color{MyDarkGreen}\textbf{Ecuación \ref{#1}}}}
 \newcommand{\textapproxtilde}{\raisebox{-0.55ex}{\textasciitilde}}
 %------------------------------------------------------------------------------------
 \geometry{
