Added section describing flux normalization process

--- a/Metodologia/Metodologia.tex
+++ b/Metodologia/Metodologia.tex
@@ -1,4 +1,5 @@
 \chapter{Metodología} \label{metodologia}
 
 \input{Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex}
+\input{Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex}
 \input{Metodologia/Secciones/ModeloComputacional/ModeloComputacional.tex}
