--- a/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
+++ b/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
@@ -12,21 +12,19 @@ observaciones astronómicas) se utiliza el periodograma \textbf{Lomb-Scargle},
 derivado de la transformada de Fourier \brakcite{understandingLombScargle}.
 Usando un mallado suficientemente fino para explorar el espacio de frecuencias
 se puede encontrar la frecuencia de mayor potencia, indicando el periodo orbital
-del sistema. El espectro de frecuencias se encuentra en la figura
-\ref{periodogramaLSFrecs}. El código para determinar el periodo orbital se ubica
-en el Notebook
-\href{https://github.com/KnightIV/UANL_MAPTA_PlanObservaciones/blob/0b571b7377a76e0360d5e142924cc964194ace8b/analisis/phoebe_model/estimations/periodogram.ipynb}{\code{periodogram.ipynb}}.
+del sistema; al mismo tiempo, para restringir esta malla de periodos se impuso
+un límite máximo de 1 día, basado en las primeras observaciones de Iturbide. El
+espectro de frecuencias se encuentra en la \quotefigure{periodogramaLSFrecs}. 
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[scale=0.55]{Metodologia/Secciones/AnalisisPeriodo/Figures/LS Power Spectrum.png}
+	\includegraphics[scale=0.23]{Metodologia/Secciones/AnalisisPeriodo/Figures/IRSA Periodogram.png}
 	
 	\caption{Espectro de frecuencias de las curvas de luz fotométricas de
-	\atoObjIdNoSpace, usando los datos recabados de Iturbide y de Gaia. Esta fue
-	generada usando el periodograma dentro de los estimadores de PHOEBE, el cual
-	utiliza el periodograma Lomb-Scargle en Astropy. El pico de más alta
-	potencia está ubicado en el periodo de 0.16677069137624234 d [4.002496593
-	h]} 
+	\atoObjIdNoSpace, utilizando observaciones de ZTO en el filtro R. Este
+	periodograma fue generado utilizando la herramienta del IRSA dedicada al
+	análisis de series de tiempo, \textbf{Time Series Tool}. El pico de más alta
+	potencia está ubicado en el periodo de 0.1667834993 d [4.002803983 h]} 
 	\label{periodogramaLSFrecs}
 \end{figure}
 
@@ -38,21 +36,21 @@ luz en las que se observan eclipses en el sistema. Esto es necesario para poder
 modelar la curva de luz en fase como una Gaussiana doble, el modelo aceptado
 para una binaria eclipsante. %TODO: agrega bibliografía
 Utilizando la segunda armónica de la frecuencia de más alta potencia se puede
-ver esta forma esperada de la curva de luz, como se puede ver en la figura
-\ref{gaiaIturbidePhaseFold}. El periodo orbital encontrado es de 8.0049931 horas.
+ver esta forma esperada de la curva de luz, como se puede ver en la
+\quotefigure{gaiaIturbideZtfPhaseFold}. El periodo orbital encontrado es de
+8.005607976 horas.
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[scale=0.72]{Metodologia/Secciones/AnalisisPeriodo/Figures/Gaia Phase-Folded.png}
-	\includegraphics[scale=0.72]{Metodologia/Secciones/AnalisisPeriodo/Figures/Iturbide Phase-Folded.png}
+	\includegraphics[scale=0.3]{Metodologia/Secciones/AnalisisPeriodo/Figures/ZTF Phase-Folded.png}
+	\includegraphics[scale=0.3]{Metodologia/Secciones/AnalisisPeriodo/Figures/Gaia Phase-Folded.png}
+	\includegraphics[scale=0.4]{Metodologia/Secciones/AnalisisPeriodo/Figures/Iturbide Phase-Folded.png}
 
-	\caption{Curvas de luz de Gaia e Iturbide en espacio fase dado un periodo
-		orbital de 8.0049 horas. En este momento las curvas de luz de Gaia
-		muestran un comportamiento desordenado debido a que el tiempo de
-		conjunción superior del sistema no ha sido bien definido, y actualmente
-		se encuentra en su valor inicial de 0.0, el cual no es correcto para
-		este sistema. Tanto el periodo orbital como el tiempo de conjunción
-		superior son corregidos en los siguientes pasos de afinación del modelo
-		de PHOEBE.}
-	\label{gaiaIturbidePhaseFold}
+	\caption{Curvas de luz de ZTF, Gaia e Iturbide en espacio fase dado un
+		periodo orbital de 8.005607976 horas. El tiempo de conjunción superior
+		son corregidos en los siguientes pasos de afinación del modelo de
+		PHOEBE, el cual ajusta la fase 0 para que coincidan las 3 curvas de luz.
+		Las observaciones de Iturbide se clasifican por su noche de observación,
+		indicado por su color.}
+	\label{gaiaIturbideZtfPhaseFold}
 \end{figure}
