Added PHOEBE scientific reference text

--- a/ref.bib
+++ b/ref.bib
@@ -276,6 +276,15 @@ A. Nitta and D. P. Schneider and S. A. Snedden and D. G. York},
   YEAR            = {2020}
 }
 
+@techreport{phoebeScientificReference,
+  AUTHOR      = {Andrej Prša},
+  INSTITUTION = {Villanova University College of Arts and Sciences Department of Astronomy and Astrophysics},
+  TITLE       = {PHOEBE Scientific Reference},
+  subtitle    = {PHOEBE version 0.30},
+  YEAR        = {2011},
+  month       = {June},
+}
+
 @article{understandingLombScargle,
   AUTHOR          = {Jacob T. VanderPlas},
   JOURNAL         = {The Astrophysical Journal Supplement Series},
