Renamed command for better intellisense

--- a/Observaciones/Secciones/Observatorio.tex
+++ b/Observaciones/Secciones/Observatorio.tex
@@ -33,7 +33,7 @@ Frente al CCD va equipado una rueda de filtros \textbf{ZWO
 la cual puede ser equipada con 7 filtros distintos. Para las observaciones
 recabadas en este trabajo, utilizamos solamente el filtro \textbf{Luminance}, el
 cual se aproxima a la región del visible del espectro electromagnético
-(\quotefigure{zwoFilterTransmissionCurve}). 
+(\reffigure{zwoFilterTransmissionCurve}). 
 
 \begin{figure}[!ht]
 	\centering
