--- a/Observaciones/Secciones/Fotometria.tex
+++ b/Observaciones/Secciones/Fotometria.tex
@@ -136,11 +136,11 @@ calcular la magnitud diferencial de \atoObjId con la \quoteequation{observacione
 la fotometría diferencial a comparación de magnitudes absolutas es que llega a
 minimizar los efectos causados por obstrucciones del cielo, como nubes
 intermitentes o celdas turbulentas en la atmósfera. Los resultados para un día
-de observación se encuentra en la \quotefigure{differentialMagDec7}, donde se
+de observación se encuentra en la \reffigure{differentialMagDec7}, donde se
 puede apreciar la variabilidad de \atoObjId comparado con ambas estrellas de
 referencia. Este proceso se repite para cada noche de observación, al final
 obteniendo una curva de luz del sistema visto en la
-\quotefigure{iturbideAtoLightCurve}. El código completo se encuentra en
+\reffigure{iturbideAtoLightCurve}. El código completo se encuentra en
 \href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/analisis/iturbide/iraf/qphot_sigma_clip.ipynb}{\code{qphot\_sigma\_clip.ipynb}}.
 
 % Aquí se calcula el
