--- a/Muestra/Secciones/ATO_Objeto.tex
+++ b/Muestra/Secciones/ATO_Objeto.tex
@@ -5,13 +5,13 @@ estrellas variables dentro del catálogo del \textbf{Asteroid Terrestrial-impact
 Last Alert System} (\textbf{ATLAS}), aprovechando su cobertura de
 aproximadamente \num{13000} $\mathrm{deg}^2$ al menos 4 veces por noche. Esta
 cadencia de observación es ideal para observar estrellas variables; el tiempo de
-observación es suficientemente corto para obtener una curva de luz lo
-suficientemente completa para estudiar estos sistemas. Lograron clasificar las
-estrellas variable del catálogo en 15 distintas categorías de la morfología de
-sus curvas de luz; de estas reportan que \num{74700} fuentes son binarias
-eclipsantes. A pesar de haber confirmado la clasificación de estas fuentes, aún
-quedan varios sistemas cuya naturaleza es desconocido, sus únicos descriptores
-vienen siendo una clasificación tentativa.
+observación es suficientemente corto para obtener una curva de luz adecuada para
+estudiar estos sistemas. Lograron clasificar las estrellas variable del catálogo
+en 15 distintas categorías de la morfología de sus curvas de luz; de estas
+reportan que \num{74700} fuentes son binarias eclipsantes. A pesar de haber
+confirmado la clasificación de estas fuentes, aún quedan varios sistemas cuya
+naturaleza es desconocido, sus únicos descriptores vienen siendo una
+clasificación tentativa.
 
 \textbf{\atoObjId} está clasificado como una de estas candidatas a binaria
 eclipsante. Como este sistema carece una clasificación concreta, no existe mucha
